added possibility to select project from file system

--- a/src/PiecewiseLinearFunctionDesigner.DomainModel/PiecewiseLinearFunctionDesigner.DomainModel.csproj
+++ b/src/PiecewiseLinearFunctionDesigner.DomainModel/PiecewiseLinearFunctionDesigner.DomainModel.csproj
@@ -4,4 +4,18 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Reference Include="PresentationFramework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
+        <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_MSIL\PresentationFramework\v4.0_4.0.0.0__31bf3856ad364e35\PresentationFramework.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\PiecewiseLinearFunctionDesigner.Core\PiecewiseLinearFunctionDesigner.Core.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    </ItemGroup>
+
 </Project>
