added line graph

--- a/src/PiecewiseLinearFunctionDesigner.Module.Demonstration/PiecewiseLinearFunctionDesigner.Module.Demonstration.csproj
+++ b/src/PiecewiseLinearFunctionDesigner.Module.Demonstration/PiecewiseLinearFunctionDesigner.Module.Demonstration.csproj
@@ -5,6 +5,7 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="InteractiveDataDisplay.Core" Version="1.0.0" />
     <PackageReference Include="Prism.Wpf" Version="8.0.0.1909" />
   </ItemGroup>
   <ItemGroup>
